...
                default:
                    print("NO IMAGE AVAILABLE FOR " + self.FriendName.text! + fileName)
                }
            }else{
                    //Set the default images for Sample
                    if (Name == "Sample"){
                        var image = UIImage(named: "Samplehappiness")!
                        HappyMojiButton.setImage(image, for: .normal)
                        print("sample!@)$(#*)$(*$")
                        image = UIImage(named: "Samplesadness")!
                        SadMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Sampleanger")!
                        AngryMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Samplesurprise")!
                        SurpriseMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Sampledisgust")!
                        DisgustMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Samplefear")!
                        FearMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Samplecontempt")!
                        ContemptMojiButton.setImage(image, for: .normal)
                        image = UIImage(named: "Sampleneutral")!
                        NeutralMojiButton.setImage(image, for: .normal)
                    }
            }
        }
    }

...
