...
    private var name = ""
    
    @IBOutlet weak var collection: UICollectionView!
    
    @IBAction func addFriend_tab(_ sender: Any) {
        //create popup
        let alertController = UIAlertController(title: "Add New Friend", message: "Type your friends name below", preferredStyle: UIAlertControllerStyle.alert)
        alertController.addTextField { (textField : UITextField!) -> Void in
            textField.placeholder = "Enter Name"
        }
        //save button
        let saveAction = UIAlertAction(title: "Save", style: UIAlertActionStyle.default, handler: { alert -> Void in
            let text = alertController.textFields![0] as UITextField //extract users input
            self.name = text.text!
            if self.name != ""{
...
