...
        } else {
            //store the score:
            insertScore(score: score, difficulty: difficulty)
            //display the score:
            let finishMessage = "You got \(score)/\(allQuestions.list.count)!"
            
            let alert = UIAlertController(title: "Nice job!", message: finishMessage, preferredStyle: .alert)
            
            let restartAction = UIAlertAction(title: "Restart", style: .default, handler: {action in self.restartQuiz()})
            alert.addAction(restartAction)
            present(alert, animated:true, completion: nil)
            pickedAnswer = 0 //reset choice when restarting quiz (maybe move to restart quiz func)
        }
        updateUI()
    }
...
